@startuml Process_StateMachine
skinparam backgroundColor #FAFAFA
skinparam defaultFontName Arial
skinparam stateBorderColor #555
skinparam stateBackgroundColor #FFFFFF
skinparam arrowColor #444
skinparam noteBackgroundColor #FFFFEE
skinparam noteBorderColor #AAAAAA

title ScribeHealth AI — Consultation Lifecycle State Machine (FR-11)

[*] --> SCHEDULED : Doctor creates session\n<<SessionService.createSession()>>

SCHEDULED --> IN_PROGRESS : Doctor starts recording\n<<assertTransition + DB update>>

IN_PROGRESS --> RECORDED : Doctor stops recording\n<<audio saved to Supabase Storage>>

RECORDED --> TRANSCRIBED : Sarvam AI transcription complete\n<<withRetry() × 3 on failure>>

TRANSCRIBED --> UNDER_REVIEW : SOAP note generated\n<<Claude Sonnet + NoteGeneratorFactory>>

UNDER_REVIEW --> APPROVED : Doctor approves\n<<note locked — immutable>>

UNDER_REVIEW --> REJECTED : Doctor rejects\n<<flagged for regeneration>>

REJECTED --> UNDER_REVIEW : Doctor regenerates note\n<<new SOAP generated — back to review>>

APPROVED --> [*] : Terminal state\n<<no further transitions allowed>>

note right of SCHEDULED
  Default status on session creation.
  assertTransition() blocks any skip.
end note

note right of IN_PROGRESS
  Recording active.
  Frontend timer starts.
end note

note right of RECORDED
  Audio URL persisted.
  Triggers async AI pipeline.
end note

note right of TRANSCRIBED
  Transcript ready.
  Entity extraction runs next.
end note

note right of UNDER_REVIEW
  SOAP note ready for doctor.
  Human-in-the-loop checkpoint (NFR-01).
end note

note right of APPROVED
  Immutable record.
  Available for sharing (FR-09).
  Audit: note_approved.
end note

note right of REJECTED
  Only valid next state: UNDER_REVIEW.
  Regeneration path active.
  Audit: note_rejected.
end note

@enduml